docs: capture transformation roadmap and archive runtime guardrails